# mihomo-ssh

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  ci.yml  release-windows.yml
changelist/: 2026-06-04-subscription-and-proxy-settings-ui.md  2026-06-11-backup-rollback.md  2026-06-11-code-quality-review-fixes.md  2026-06-11-performance-optimizations.md  2026-06-12-tun-mode-ssh-safe-toggle.md  2026-06-30-bootstrap-subscription-fallback.md  2026-07-01-node-auto-recovery-and-install-flow.md  v0.1.12-shared-rules-and-clear-logs.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  controller.rs  lib.rs  main.rs  mihomo.rs  models.rs  redaction.rs  remote_proxy.rs  ssh.rs  storage.rs
src/lib/: api.ts  redaction.test.ts  redaction.ts  updater.ts
