[package]
name = "mihomo-server-manager"
version = "0.1.0"
description = "Local desktop manager for mihomo on headless Linux servers."
authors = ["Codex"]
edition = "2021"

[lib]
name = "mihomo_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mihomo-server-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tempfile = "3.14"
tokio = { version = "1", features = ["time"] }
urlencoding = "2.1"
wait-timeout = "0.2"

[features]
default = []
